Making .ssh with appropriate perms

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,9 @@ FROM alpine:edge
 RUN echo https://dl-cdn.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories
 
 RUN apk --update add openssh-client rsync lsyncd && \
-	echo 'StrictHostKeyChecking=no' >> /etc/ssh/ssh_config
+	echo 'StrictHostKeyChecking=no' >> /etc/ssh/ssh_config && \
+	mkdir /root/.ssh && \
+	chmod -R og-rwx /root/.ssh 
 
 CMD [ "lsyncd", "-nodaemon", "-delay", "0", "/etc/lsyncd.conf" ]
 
