--- a/mnt/etc/lsyncd.conf.sample
+++ b/mnt/etc/lsyncd.conf.sample
@@ -2,15 +2,17 @@ settings {
 	logfile = "/dev/stdout",
 	statusFile = "/var/run/lsyncd.status",
 	pidfile = "/var/run/lsyncd.pid",
-	nodaemon = "true"
+	nodaemon = "true",
+	insist = "true"
 }
 
 sync {
 	default.rsyncssh,
-	source = '/mnt/data',
-	host = 'example.com',
-	targetdir = '/mnt/data',
+	source = '/mnt/host/<guest name here>',
+	host = 'remote.example.com',
+	targetdir = '/mnt/data/<guest name here>',
 	ssh = {
-		port = 22
+		port = 4022,
+		identityFile = '/root/.ssh/id_rsa'
 	}
 }
