Added upgrade for libs to works

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,7 @@ FROM alpine:edge
 RUN echo https://dl-cdn.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories
 
 RUN apk --update add openssh-client rsync lsyncd && \
+	apk upgrade -a && \
 	echo 'StrictHostKeyChecking=no' >> /etc/ssh/ssh_config && \
 	mkdir /root/.ssh && \
 	chmod -R og-rwx /root/.ssh 
